<resources>
    <string name="app_name">Family Map</string>
    <string name="server_host">Server Host:</string>
    <string name="server_port">Server Port:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="login_register_result">%s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_event_details">Click on a marker to see event details</string>
    <string name="searchMenu">Search</string>
    <string name="settingsMenu">Settings</string>
    <string name="pa_f_name">First Name</string>
    <string name="pa_l_name">Last Name</string>
    <string name="pa_gender">Gender</string>
    <string name="life_events_title">Life Events</string>
    <string name="family_members_title">Family</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="spouse">Spouse</string>
    <string name="child">Child</string>
    <string name="searchBarPrompt">Search</string>
    <string name="life_story_title">Life Story Lines</string>
    <string name="life_story_subtitle">SHOW LIFE STORY LINES</string>
    <string name="family_tree_title">Family Tree Lines</string>
    <string name="family_tree_subtitle">SHOW FAMILY TREE LINES</string>
    <string name="spouse_title">Spouse Lines</string>
    <string name="spouse_subtitle">SHOW SPOUSE LINES</string>
    <string name="father_filter_title">Father\'s Side</string>
    <string name="father_filter_subtitle">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mother_filter_title">Mother\'s Side</string>
    <string name="mother_filter_subtitle">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="male_filter_title">Male Events</string>
    <string name="female_filter_title">Female Events</string>
    <string name="gender_filter_subtitle">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout">Logout</string>
    <string name="logout_subtitle">RETURN TO LOGIN SCREEN</string>
</resources>